# mamba-bioheat-seg

./: .gitignore  README.md  WEIGHTS.md  pyproject.toml
scripts/: fetch_weights.py
src/bioheat_fusion_gpu/: app.py  bioheat_torch.py  compare_bioheat_mamba_graphcut.py  data_io.py  fuse.py  graphcut.py  inference_mamba.py  inference_physics.py  mamba_blocks.py  mamba_pinn_net.py  physics_informed_net.py  train_mamba_physics_informed.py  train_true_e2e.py  true_e2e_3d.py
src/bioheat_fusion_gpu/conf/: app.yaml  config.yaml
src/bioheat_fusion_gpu/conf/experiments/: 2xa100_true_e2e_physics.yaml  mamba_physics_informed.yaml
src/bioheat_fusion_gpu/conf/hydra/launcher/: submitit_slurm.yaml
src/bioheat_fusion_gpu/conf/task/: infer_bioheat_vs_mamba_graphcut.yaml  train_mamba_pinn.yaml  train_true_e2e.yaml
weights/: README.md  manifest.json
